# PDF-RAG-Application

./: .dockerignore  .env.example  .gitattributes  .gitignore  .requirements.txt  DEPLOYMENT.md  Dockerfile  README.md  RENDER-CHECKLIST.md  RENDER-DEPLOY.md  custom_types.py  data_loader.py  docker-compose.yml  index.html  main.py  pyproject.toml  render.yaml  requirements.txt  start.bat  start.sh  vector_db.py
