[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-rag-application"
version = "0.1.0"
description = "PDF RAG Application with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "groq>=1.5.0",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-fastembed>=0.6.0",
    "llama-index-readers-file>=0.6.0",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[tool.setuptools]
py-modules = ["main", "data_loader", "vector_db", "custom_types"]
